--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   lottie: ^3.1.2
   carousel_slider: ^5.0.0
   pinput: ^5.0.0
+  supabase_flutter: ^2.8.0
+  google_sign_in: ^6.2.1
   get:
   google_fonts:
 
